Added tests | Made small fixes | Readme | + .sh files

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# Вы можете настроить переменные окружения под себя.
+# Либо оставить данные без изменения.
 POSTGRES_USER=myuser
 POSTGRES_PASSWORD=mypassword
 POSTGRES_DB=mydatabase
