--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ alembic = "^1.13.2"
 pydantic = "^2.9.2"
 python-dotenv = "^1.0.1"
 pydantic-settings = "^2.5.2"
+httpx = "^0.27.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
