--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 alembic==1.13.2 ; python_version >= "3.12" and python_version < "4.0"
 annotated-types==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
 anyio==4.6.0 ; python_version >= "3.12" and python_version < "4.0"
+certifi==2024.8.30 ; python_version >= "3.12" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.12" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
 coverage[toml]==7.6.1 ; python_version >= "3.12" and python_version < "4.0"
 fastapi==0.115.0 ; python_version >= "3.12" and python_version < "4.0"
 greenlet==3.1.1 ; python_version < "3.13" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version >= "3.12"
 h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
+httpcore==1.0.5 ; python_version >= "3.12" and python_version < "4.0"
+httpx==0.27.2 ; python_version >= "3.12" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.12" and python_version < "4.0"
 iniconfig==2.0.0 ; python_version >= "3.12" and python_version < "4.0"
 mako==1.3.5 ; python_version >= "3.12" and python_version < "4.0"
